--- a/css/style3.css
+++ b/css/style3.css
@@ -42,7 +42,7 @@ body {
   margin: 0 auto;
   padding: 40px;
   text-align: center;
-  width: 400px;
+  /*width: 400px;*/
   height: 1000px;
   overflow: scroll;
 }
