--- a/css/style3.css
+++ b/css/style3.css
@@ -43,8 +43,8 @@ body {
   padding: 40px;
   text-align: center;
   /*width: 400px;*/
-  height: 1000px;
-  overflow: scroll;
+  /*height: 1000px;*/
+  /*overflow: scroll;*/
 }
 
 h1 {
